--- a/mainPage/contactMe.html
+++ b/mainPage/contactMe.html
@@ -1,36 +1,36 @@
 <html lang="en">
 
 <head>
-    <meta char="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta char="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Contact Me Page</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Contact Me Page</title>
+	
 </head>
 
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.1/js/tether.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.1/js/tether.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
 
-    <nav class="navbar navbar-full navbar-dark bg-inverse">
-        <a class="navbar-brand" href="main.html">FaceLock</a>
-        <div class="nav navbar-nav pull-xs-right">
-            <a class="nav-item nav-link" href="main.html">Home</a>
-            <a class="nav-item nav link" href="contactMe.html">Contact Me</a>
-        </div>
-    </nav>
-    <div class="jumbotron">
-        <div class="container">
-            <h1>Contact Me</h1>
-            <p>Want to get in touch with me? I love making new friends.</p>
-        </div>
-    </div>
-    <div id="contactEmail">
-        <p>Contact us anytime at <a href="mailto:orpheus@hackclub.com">facelock@gmail.com</a>.</p>
-    </div>
+	<nav class="navbar navbar-full navbar-dark bg-inverse">
+		<a class="navbar-brand" href="main.html">FaceLock</a>
+		<div class="nav navbar-nav pull-xs-right">
+			<a class="nav-item nav-link" href="main.html">Home</a>
+			<a class="nav-item nav link" href="contactMe.html">Contact Me</a>
+		</div>
+	</nav>
+	<div class="jumbotron">
+		<h1>Contact Me</h1>
+		<p>Want to get in touch with me? I love making new friends.</p>
+
+	</div>
+	<div class="contactEmail">
+		<p id="tab">Contact us anytime at <a href="mailto:facelock@gmail.com" style="color: #FFFFFF">facelock@gmail.com</a>.</p>
+	</div>
 
 
 
