--- a/mainPage/main.html
+++ b/mainPage/main.html
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Main Page</title>
 </head>
@@ -31,7 +32,7 @@
                 <p>I'm a firm believer that dinosaurs are the best speices and will never go extinct. You can add as much text as you'd like in this section.</p>
             </div>
             <div class="col-md-3">
-                <h2>I Rule</h2>
+                <h2 id="tab">I Rule</h2>
                 <p>By the transitive property, since dinosaurs rule, I rule. You can add as much text as you'd like in this section</p>
             </div>
             <div class="col-md-3">
